--- a/style.css
+++ b/style.css
@@ -5,6 +5,38 @@
 }
 
 body {
-  height: 100vh;
   background: #060AB2;
+  display: flex;
+  height: 100vh;
+}
+
+.memory-game {
+  border: 2px solid lime;
+  display: flex;
+  flex-wrap: wrap;
+  height: 640px;
+  margin: auto;
+  width: 640px;
+}
+
+.memory-card {
+  height: calc(33.333% - 10px);
+  margin: 5px;
+  position: relative;
+  transform: scale(1);
+  width: calc(25% - 10px);
+}
+
+.memory-card:active {
+  transform: scale(.97);
+  transition: transform .2s;
+}
+
+.front-face, .back-face {
+  background: #1c7ccc;
+  border-radius: 5px;
+  height: 100%;
+  padding: 20px;
+  position: absolute;
+  width: 100%;
 }
